Fixed  styling of timer color and fund type last category to left align

--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -1313,7 +1313,7 @@
 
       span {
         font-size: 13px;
-        color: #3792fc;
+        color: var(--primary);
       }
     }
 
